--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -1,4 +1,70 @@
-#logoLogin img {
-    max-width: 100%;
-    height: auto;
+    #logoLogin img {
+        max-width: 100%;
+        height: auto;
+        transition: 0.5s;
+        /*-webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);*/
+    }
+    /*
+#logoLogin img:hover {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
 }
+*/
+
+    .round {
+        margin: 20px auto 0 auto;
+        border-radius: 50%;
+        overflow: hidden;
+        width: 150px;
+        height: 150px;
+        /*box-shadow: 3px 3px 5px #555;
+         sombra deslocada em 3px para baixo e 3px para direita, borrada em 5px e com cor cinza */
+    }
+
+    .round div {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center center
+    }
+    /* COPIA DO BOOTSTRAP */
+
+    .text-left {
+        text-align: left;
+    }
+
+    .text-right {
+        text-align: right;
+    }
+
+    .text-center {
+        text-align: center;
+    }
+
+    .text-justify {
+        text-align: justify;
+    }
+
+    .text-nowrap {
+        white-space: nowrap;
+    }
+
+    .text-lowercase {
+        text-transform: lowercase;
+    }
+
+    .text-uppercase {
+        text-transform: uppercase;
+    }
+
+    .text-capitalize {
+        text-transform: capitalize;
+    }
+
+    .text-muted {
+        color: #777;
+    }
