--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -32,8 +32,15 @@
         background-position: center center;
     }
 
-    .avatarchat {
-        border-radius: 50%;
+    .botaoFlutuante {
+        display: scroll;
+        position: fixed !important;
+        float: right;
+        display: inline;
+        bottom: 50px;
+        right: 5px;
+        z-index: 50;
+        box-shadow: 3px 3px 5px #555;
     }
     /* F7 */
 
