--- a/hortapp/www/views/usuario/perfil.html
+++ b/hortapp/www/views/usuario/perfil.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <div class="left sliding">
-            <a href="#" class="link">
+            <a href="#" class="back link">
                 <i class="icon icon-back"></i>
                 <span>Voltar</span>
             </a>
@@ -9,14 +9,33 @@
         <div class="center sliding">Meu perfil</div>
         <div class="right sliding">
             <a href="#" data-panel="left" class="link open-panel">
-                <i class="icon icon-bars"></i>
-                <span>Menu</span>
+                <i class="fa fa-check" aria-hidden="true"></i>
+                <span>Salvar</span>
             </a>
         </div>
+
+        <!-- Sub navbar -->
+
+
     </div>
 </div>
 <div class="page" data-page="perfil">
     <div class="page-content">
+        <a href="views/about/about.html" class="button button-big button-fill botaoFlutuante color-green"><i class="fa fa-check" aria-hidden="true"></i>&nbspSalvar</a>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
+        <h1>Meu Perfil!!! Oloco bicho...</h1>
         <h1>Meu Perfil!!! Oloco bicho...</h1>
     </div>
 </div>
