Primeira parte do formulário do perfil

--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -41,6 +41,7 @@
         right: 5px;
         z-index: 50;
         box-shadow: 3px 3px 5px #555;
+        /*<a href="views/about/about.html" class="button button-big button-fill botaoFlutuante color-green"><i class="fa fa-check" aria-hidden="true"></i>&nbspSalvar</a>*/
     }
     /* F7 */
 
