--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -1,12 +1,19 @@
-    #logoLogin img {
-        max-width: 100%;
-        height: auto;
-        transition: 0.5s;
-        /*-webkit-transform: scale(1.2);
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+#logoLogin img {
+    max-width: 100%;
+    height: auto;
+    transition: 0.5s;
+    /*-webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2);*/
-    }
-    /*
+}
+
+
+/*
 #logoLogin img:hover {
     -webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
@@ -14,107 +21,135 @@
 }
 */
 
-    .round {
-        margin: 20px auto 0 auto;
-        border-radius: 50%;
-        overflow: hidden;
-        width: 150px;
-        height: 150px;
-        /*box-shadow: 3px 3px 5px #555;
+.round {
+    margin: 20px auto 0 auto;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 150px;
+    height: 150px;
+    /*box-shadow: 3px 3px 5px #555;
          sombra deslocada em 3px para baixo e 3px para direita, borrada em 5px e com cor cinza */
-    }
+}
 
-    .round div {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background-size: cover;
-        background-position: center center;
-    }
+.round div {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+}
 
-    .botaoFlutuante {
-        display: scroll;
-        position: fixed !important;
-        float: right;
-        display: inline;
-        bottom: 50px;
-        right: 5px;
-        z-index: 50;
-        box-shadow: 3px 3px 5px #555;
-        /*<a href="views/about/about.html" class="button button-big button-fill botaoFlutuante color-green"><i class="fa fa-check" aria-hidden="true"></i>&nbspSalvar</a>*/
-    }
-    /* F7 */
+.botaoFlutuante {
+    display: scroll;
+    position: fixed !important;
+    float: right;
+    display: inline;
+    bottom: 50px;
+    right: 5px;
+    z-index: 50;
+    box-shadow: 3px 3px 5px #555;
+    /*<a href="views/about/about.html" class="button button-big button-fill botaoFlutuante color-green"><i class="fa fa-check" aria-hidden="true"></i>&nbspSalvar</a>*/
+}
 
-    .facebook-card .card-header {
-        display: block;
-        padding: 10px;
-    }
+.divisor {
+    color: #C7C7C7 !important;
+}
 
-    .facebook-card .facebook-avatar {
-        float: left;
-    }
 
-    .facebook-card .facebook-name {
-        margin-left: 44px;
-        font-size: 14px;
-        font-weight: 500;
-    }
+/* F7 */
 
-    .facebook-card .facebook-date {
-        margin-left: 44px;
-        font-size: 13px;
-        color: #8e8e93;
-    }
+.facebook-card .card-header {
+    display: block;
+    padding: 10px;
+}
 
-    .facebook-card .card-footer {
-        background: #fafafa;
-    }
-    /*.facebook-card .card-footer a {
+.facebook-card .facebook-avatar {
+    float: left;
+}
+
+.facebook-card .facebook-name {
+    margin-left: 44px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.facebook-card .facebook-date {
+    margin-left: 44px;
+    font-size: 13px;
+    color: #8e8e93;
+}
+
+.facebook-card .card-footer {
+    background: #fafafa;
+}
+
+
+/*.facebook-card .card-footer a {
         color: #81848b;
         font-weight: 500;
     }*/
 
-    .facebook-card .card-content img {
-        display: block;
-    }
+.facebook-card .card-content img {
+    display: block;
+}
 
-    .facebook-card .card-content-inner {
-        padding: 15px 10px;
-    }
-    /* COPIA DO BOOTSTRAP */
+.facebook-card .card-content-inner {
+    padding: 15px 10px;
+}
 
-    .text-left {
-        text-align: left;
-    }
 
-    .text-right {
-        text-align: right;
-    }
+/* COPIA DO BOOTSTRAP */
 
-    .text-center {
-        text-align: center;
-    }
+.text-left {
+    text-align: left;
+}
 
-    .text-justify {
-        text-align: justify;
-    }
+.text-right {
+    text-align: right;
+}
 
-    .text-nowrap {
-        white-space: nowrap;
-    }
+.text-center {
+    text-align: center;
+}
 
-    .text-lowercase {
-        text-transform: lowercase;
-    }
+.text-justify {
+    text-align: justify;
+}
 
-    .text-uppercase {
-        text-transform: uppercase;
-    }
+.text-nowrap {
+    white-space: nowrap;
+}
 
-    .text-capitalize {
-        text-transform: capitalize;
-    }
+.text-lowercase {
+    text-transform: lowercase;
+}
 
-    .text-muted {
-        color: #777;
-    }
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.text-capitalize {
+    text-transform: capitalize;
+}
+
+.text-muted {
+    color: #777;
+}
+
+hr {
+    /*margin-top: 20px;
+        margin-bottom: 20px;*/
+    border: 0;
+    border: 1px solid #eee;
+}
+
+hr {
+    height: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+.hide {
+    display: none !important;
+}
