Adicionado animate.css no bower e mapa com api no iframe

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -87,13 +87,13 @@
                                     </div>
                                 </div>
                                 <div class="row hide mapa">
-                                    <img src="http://cdn.newsapi.com.au/image/v1/0a0ceda4bda18e664ffac1a8fa86a7d1" alt="Google Maps" />
-                                    <!--<iframe
+                                    <!--<img src="http://cdn.newsapi.com.au/image/v1/0a0ceda4bda18e664ffac1a8fa86a7d1" alt="Google Maps" />-->
+                                    <iframe
   width="600"
   height="450"
   frameborder="0" style="border:0"
   src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs&q=Space+Needle,Seattle+WA" allowfullscreen>
-</iframe>-->
+</iframe>
                                 </div>
                             </div>
                         </div>
