Busca por CEP concluída. Alterando campos do formulário dinâmicamente após a requisição Ajax

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -140,6 +140,36 @@
                                         </div>
                                     </a>
                                 </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title label">Bairro</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endBairro" id="endBairro" placeholder="Bairro">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title label">Logradouro</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endLogradouro" id="endLogradouro" placeholder="Logradouro">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title label">Número</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endNumero" id="endNumero" placeholder="Numero">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </li>
