--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -8,7 +8,7 @@
         </div>
         <div class="center sliding">Meu perfil</div>
         <div class="right sliding">
-            <a href="#" data-panel="left" class="link">
+            <a href="#" data-panel="left" class="link" id="usuSalvar">
                 <i class="fa fa-check" aria-hidden="true"></i>
                 <span>Salvar</span>
             </a>
@@ -18,7 +18,7 @@
 
 <div class="page" data-page="meuPerfil">
     <div class="page-content">
-        <form id="formPerfil" class="list-block store-data">
+        <form id="usuFormulario" class="list-block store-data">
             <div class="list-block accordion-list">
                 <ul>
 
@@ -91,7 +91,10 @@
                             </ul>
                             <div class="content-block">
                                 <div class="row hide mapa">
-                                    <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs&q=Space+Needle,Seattle+WA" allowfullscreen></iframe>
+                                    <!--<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs&q=Space+Needle,Seattle+WA" allowfullscreen></iframe>-->
+                                    <input id="endereco" type="textbox" value="">
+                                    <input id="btnBuscar" type="button" value="Buscar">
+                                    <div style="height: 100%; width:100%;height:400px" id="mapCanvas"></div>
                                 </div>
                                 <div class="row divisor animated zoomIn">
                                     <div class="col-45">
@@ -188,7 +191,7 @@
                             <ul>
                                 <li>
                                     <label class="label-checkbox item-content">
-                                      <input type="checkbox" name="usuTelefoneVisivel" value="usuTelefoneVisivel" checked="checked">
+                                      <input type="checkbox" name="usuTelefoneVisivel" value="true" checked="checked">
                                       <div class="item-media">
                                           <i class="icon icon-form-checkbox"></i>
                                       </div>
@@ -205,7 +208,7 @@
                             <ul>
                                 <li>
                                     <label class="label-checkbox item-content">
-                                    <input type="checkbox" name="usuEndVisivel" value="usuEndVisivel" checked="checked">
+                                    <input type="checkbox" name="usuEndVisivel" value="true" checked="checked">
                                     <div class="item-media">
                                         <i class="icon icon-form-checkbox"></i>
                                     </div>
