--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -7,6 +7,14 @@ img {
     height: 0 !important;
 }
 
+#mapCanvas{
+  width: 100%;
+  height: 350px;
+}
+
+.pesquisarLocalizacao{
+  padding-bottom: 10px !important;
+}
 
 /*#logoLogin img {
     max-width: 100%;
