--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -78,7 +78,7 @@
                                 <li>
                                     <div class="item-content">
                                         <div class="item-inner semBorda">
-                                            <div class="item-title label">Localização atual</div>
+                                            <div class="item-title label">Usar GPS</div>
                                             <div class="item-input">
                                                 <label class="label-switch">
                                                   <input type="checkbox" nome="usuLocalizacaoAtual" id="usuLocalizacaoAtual">
@@ -89,14 +89,18 @@
                                     </div>
                                 </li>
                             </ul>
-                            <div class="content-block">
+                            <div class="content-block ">
                                 <div class="row hide mapa">
-                                    <!--<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs&q=Space+Needle,Seattle+WA" allowfullscreen></iframe>-->
+                                    <!--<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0P239oFuH1QHiBM91-nmQo435XFcDKfs&q=Space+Needle,Seattle+WA" allowfullscreen></iframe>
                                     <input id="endereco" type="textbox" value="">
-                                    <input id="btnBuscar" type="button" value="Buscar">
-                                    <div style="height: 100%; width:100%;height:400px" id="mapCanvas"></div>
+                                    <input id="btnBuscar" type="button" value="Buscar">-->
+                                    <div class="row col-100 pesquisarLocalizacao">
+                                        <a href="#" class="button col-100" id="btnPesquisarLocalizacao"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
+                                    </div>
+                                    <div id="mapCanvas"></div>
                                 </div>
-                                <div class="row divisor animated zoomIn">
+
+                                <div class="row content-block divisor animated zoomIn">
                                     <div class="col-45">
                                         <hr>
                                     </div>
