Endereço v1.0 concluído. Precisa ser alterado para o que está comentado na linha 92 do logalizacao.js

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -18,7 +18,7 @@
 
 <div class="page" data-page="meuPerfil">
     <div class="page-content">
-        <form id="usuFormulario" class="list-block store-data">
+        <form id="usuFormulario" class="list-block">
             <div class="list-block accordion-list">
                 <ul>
 
