Buscando dados do usuarioController

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -94,7 +94,8 @@
                                     <input id="endereco" type="textbox" value="">
                                     <input id="btnBuscar" type="button" value="Buscar">-->
                                     <div class="row col-100 pesquisarLocalizacao">
-                                        <a href="#" class="button col-100" id="btnPesquisarLocalizacao"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
+                                        <a href="#" class="button col-50" id="btnPesquisarLocalizacao"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
+                                        <a href="#" class="button col-50" id="btnLocalizacaoAtual"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
                                     </div>
                                     <div id="mapCanvas"></div>
                                     <div class="usuLocalizacao color-blue">
